--- a/Entrega_2 (2).ipynb
+++ b/Entrega_2 (2).ipynb
@@ -5710,7 +5710,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Análisis de variables categóricas\n"
+        "## Análisis de variables categóricas\n",
+        "En esta sección se analizarán las distribuciones de los valores de las variables categóricas, para identificar tendencias y proporciones generales en los datos."
       ]
     },
     {
@@ -5933,6 +5934,13 @@
         "plt.legend(title='Tipo de cobro', bbox_to_anchor=(1.05, 1), loc='upper left')\n",
         "plt.tight_layout()\n",
         "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Las distribuciones nos muestran una distribución de datos lógica, que nos permitirá más adelante buscar patrones y otras correlaciones entre las variables para poder construir nuestro modelo de predicción. Algunas relaciones son particularmente interesantes, como por ejemplo la frecuencia con que se utiliza el peaje en función de la hora del día o de la estación del año, o la cantidad de vehículos que se detienen en función del tipo de cobro. Estos análisis adicionales se dejan para la siguiente entrega, en la que utilizaremos un modelo de regresión para predecir comportamientos de tráfico en base a esta información."
       ]
     }
   ],
