Explicacion de outliers
Se agregó un pequeño texto descriptivo aclarando la escala del gráfico de outliers.

--- a/Entrega_2 (2).ipynb
+++ b/Entrega_2 (2).ipynb
@@ -5580,7 +5580,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Se eliminan los outliers de los pasos"
+        "El gráfico muestra en perspectiva el conjunto de datos que tomaremos. Si bien no puede apreciarse con claridad la distribución de los datos que nos interesan, podemos ver que el rango completo de la distribución se extiende de manera muy lejana a la media y a los criterios de outliers.\n",
+        "\n",
+        "A continuación, se eliminan los outliers de los pasos."
       ]
     },
     {
