Con muestra de funcionamiento

--- a/G13_Trabajo_Practico_Entrega_3.ipynb
+++ b/G13_Trabajo_Practico_Entrega_3.ipynb
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -803,16 +803,16 @@
     "x_train, y_train, x_test, y_test = get_test_train_data(\"all\", dataset=dataset)\n",
     "\n",
     "# Instanciar y entrenar el modelo\n",
-    "rf_model = DecisionTreeRegressor(criterion=\"squared_error\",\n",
+    "tree_model = DecisionTreeRegressor(criterion=\"squared_error\",\n",
     "                                 max_depth=20,\n",
     "                                 min_samples_leaf=1,\n",
     "                                 min_samples_split=2,\n",
     "                                 max_features=None,\n",
     "                                 random_state=42)\n",
-    "rf_model.fit(x_train, y_train)\n",
+    "tree_model.fit(x_train, y_train)\n",
     "\n",
     "# Predecir en el conjunto de prueba\n",
-    "y_pred_rf = rf_model.predict(x_test)\n",
+    "y_pred_rf = tree_model.predict(x_test)\n",
     "\n",
     "graph_predictions(y_test, y_pred_rf)"
    ]
@@ -895,11 +895,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Muestra de funcionamiento de los modelos\n",
+    "\n",
+    "Para apreciar visualmente cómo reacciona cada uno de los modelos a los distintos valores de entradas, se seleccionarán del dataset de 2024 algunos valores aleatorios y se mostrará la entrada, la predicción del modelo y la salida esperada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_and_show(model, x, y):\n",
+    "    \"\"\"\n",
+    "    Realiza predicciones con un modelo y muestra los resultados.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    y_pred = model.predict(x)\n",
+    "    \n",
+    "    print(\"Entrada:\")\n",
+    "    print(x)\n",
+    "    print(\"\\nSalida esperada:\", y)\n",
+    "    print(\"Predicción del modelo:\", y_pred)\n",
+    "    print(\"Error absoluto:\", abs(y - y_pred))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data_2024 = encode_columns(prepare_dataset(\"clean_data_2024.csv\"))\n",
+    "\n",
+    "# Se obtienen solo tres muestras aleatorias del dataset\n",
+    "sampled_data_2024 = data_2024.sample(3)\n",
+    "\n",
+    "for model in [linear_model, tree_model, rf_model]:\n",
+    "    print(model)\n",
+    "    for i, row in sampled_data_2024.iterrows():\n",
+    "        x = row.drop(\"pasos\")\n",
+    "        y = row[\"pasos\"]\n",
+    "        predict_and_show(model, x.values.reshape(1, -1), y)"
+   ]
   }
  ],
  "metadata": {
